Make simpler code.